# loggia

./: .dockerignore  .gitignore  Cargo.toml  README.md  UNLICENSE  pom.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
application/api/: Cargo.toml  Dockerfile
application/api/src/: main.rs
application/api/src/http/: health.rs  me.rs  mod.rs
application/api/src/http/extractors/: user.rs
application/api/src/http/health/: check_health.rs  mod.rs
application/api/src/http/identity/: authenticate.rs  get_me.rs  mod.rs
domain/: Cargo.toml
domain/src/: errors.rs  lib.rs
domain/src/health/: check_health.rs  mod.rs  system_health.rs
domain/src/identity/: mod.rs  provider.rs
domain/src/models/: mod.rs  system_health.rs  user.rs
domain/src/ports/: inbound.rs  outbound.rs
domain/src/services/: health_service.rs  mod.rs
infrastructure/sqlite/: Cargo.toml
infrastructure/sqlite/migrations/: 20240101000000_initial.sql
infrastructure/sqlite/src/: health_repository.rs  lib.rs
infrastructure/sqlite/src/health/: check_health.rs  mod.rs
infrastructure/vouch/: Cargo.toml
infrastructure/vouch/src/: lib.rs
loggia-api/: pom.xml
loggia-api/src/main/resources/: logback.xml  (+1 more)
loggia-core/: pom.xml
loggia-web/: .gitignore  README.md  package-lock.json  package.json  pom.xml  vue.config.js
loggia-web/src/: App.vue  main.js
loggia-web/src/components/: HelloWorld.vue  Navigation.vue
loggia-web/src/router/: index.js
loggia-web/src/views/: Home.vue
openspec/changes/enforce-latest-crate-versions/: tasks.md
openspec/changes/implement-vouch-identity-validation/: design.md  proposal.md  tasks.md
openspec/changes/introduce-user/: design.md  tasks.md
openspec/changes/project-documentation/: tasks.md
openspec/changes/setup-ci-cd/: .openspec.yaml  design.md  tasks.md
openspec/changes/use-case-first-module-organization/: design.md  tasks.md
openspec/specs/architecture/: spec.md
openspec/specs/current-user-api/: spec.md
openspec/specs/project-documentation/: spec.md
openspec/specs/user-identity/: spec.md
(+64 files in other folders)
