[workspace]
resolver = "2"
members = [
    "domain",
    "infrastructure/sqlite",
    "application/api",
]

[workspace.dependencies]
domain = { path = "domain" }
sqlite = { path = "infrastructure/sqlite" }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
