[workspace]
resolver = "2"
members = [
    "domain",
    "infrastructure/sqlite",
    "application/api",
]

[workspace.dependencies]
domain = { path = "domain" }
sqlite = { path = "infrastructure/sqlite" }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6.11", features = ["trace"] }
