[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
domain = { workspace = true }
sqlite = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
